--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,5 +6,13 @@
       "skills": ["SQLite", "Express", "Node"],
       "demo": "https://chat-node-js-4xf7.onrender.com/",
       "source": "https://github.com/AdanGongoraMartinez/chat-node-js"
+    },
+    {
+      "title": "Conteo de huevecillos de mosquitos.",
+      "imageSrc": "projects/mosquito.png",
+      "description": "Proyecto con la librería OpenCV de Python para visión computacional.",
+      "skills": ["Python", "OpenCV","IA"],
+      "demo": "https://www.revistadelcentrodegraduados.com/",
+      "source": "https://github.com/AdanGongoraMartinez/chat-node-js"
     }
   ]
