Fixing todo links

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -9,8 +9,8 @@
             "Node",
             "MVC"
         ],
-        "demo": "https://github.com/AdanGongoraMartinez/python-opencv-mosquito",
-        "source": "https://github.com/AdanGongoraMartinez/python-opencv-mosquito"
+        "demo": "https://front-todo-list.onrender.com",
+        "source": "https://github.com/AdanGongoraMartinez/front-todo-list"
     },
     {
         "title": "Chat en tiempo real",
